# imessage-analysis

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  main.py  pyproject.toml  skills-lock.json
.agents/skills/compare-periods/: SKILL.md
.agents/skills/group-chats/: SKILL.md
.agents/skills/imessage-analysis-status/: SKILL.md
.agents/skills/needs-reply/: SKILL.md
.agents/skills/period-in-review/: SKILL.md
.agents/skills/query-messages/: SKILL.md
.claude/skills/: compare-contacts  contact-deep-dive  needs-reply  period-in-review  query-messages
.claude/skills/imessage-analysis-install/: SKILL.md
.claude/skills/recent-conversations/: SKILL.md
.cursor/: mcp.json
.github/workflows/: ci.yml  publish-pypi.yml  python.yml  release.yml
Formula/: imessage-analysis.rb  imessage-analysis.rb.tmpl
config/: contacts.example.toml
crates/imessage-cli/: Cargo.toml  Info.plist  build.rs
crates/imessage-cli/src/: main.rs  output.rs
crates/imessage-cli/src/commands/: analysis.rs  etl.rs  mod.rs  query.rs  refresh.rs  status.rs  sync.rs
crates/imessage-core/: Cargo.toml
crates/imessage-core/src/: error.rs  lib.rs  models.rs
crates/imessage-core/src/contacts/: config_overrides.rs  macos_contacts.rs  mod.rs
crates/imessage-core/src/etl/: blob_parser.rs  incremental.rs  mod.rs  sqlite_reader.rs  transforms.rs
crates/imessage-core/src/query/: built_in.rs  engine.rs  mod.rs
crates/imessage-core/src/storage/: metadata.rs  mod.rs  parquet.rs
crates/imessage-mcp/: Cargo.toml
crates/imessage-mcp/src/: main.rs  server.rs  tools.rs
crates/imessage-python/: Cargo.toml  pyproject.toml
crates/imessage-python/python/imessage_analysis/: __init__.py
crates/imessage-python/src/: lib.rs
docs/: README.md  apple-database.md  architecture.md  cli.md  contacts.md  data-model.md  installation.md  mcp.md  python.md  releasing.md
scripts/: install.sh
skills/: SKILL.md
skills/compare-contacts/: SKILL.md
skills/contact-deep-dive/: SKILL.md
skills/imessage-analysis-install/: SKILL.md
skills/install/: SKILL.md
skills/messaging-year-in-review/: SKILL.md
skills/sync/: SKILL.md
tests/: Cargo.toml
tests/fixtures/: build_test_db.sql  test_chat.db
tests/integration/: etl_test.rs
