[workspace]
members = [
    "crates/imessage-core",
    "crates/imessage-cli",
    "crates/imessage-mcp",
    "crates/imessage-python",
    "tests",
]
# Exclude the Python bindings from default builds — use `maturin develop` instead.
default-members = [
    "crates/imessage-core",
    "crates/imessage-cli",
    "crates/imessage-mcp",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
authors = ["David Spencer <1526975+DecisionNerd@users.noreply.github.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/DecisionNerd/imessage-analysis"

[workspace.dependencies]
# Shared across multiple crates
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
