[package]
name = "imessage-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Arrow / Parquet
arrow = { version = "58", features = ["chrono-tz"] }
parquet = { version = "58", features = ["arrow", "snap"] }

# Query layer
datafusion = "53"

# Async (DataFusion requires it)
tokio.workspace = true

# Serialisation
serde.workspace = true
serde_json.workspace = true
toml = "0.8"

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Date/time
chrono.workspace = true

# URL parsing
url = "2"

# Home directory resolution
dirs-next = "2"

# macOS Contacts.app (only linked on macOS)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
block2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray", "NSError"] }
objc2-contacts = { version = "0.2", features = [
    "CNContactStore",
    "CNContact",
    "CNContactFetchRequest",
    "CNFetchRequest",
    "CNPhoneNumber",
    "CNLabeledValue",
    "block2",
] }
