[package]
name = "imessage-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "imessage-mcp"
path = "src/main.rs"

[dependencies]
imessage-core = { path = "../imessage-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
