[package]
name = "imessage-python"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "imessage_analysis"
crate-type = ["cdylib"]

[dependencies]
imessage-core = { path = "../imessage-core" }
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-arrow = "0.17"
arrow = { version = "58", features = ["chrono-tz"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
