[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "imessage-analysis"
version = "0.1.1"
description = "Extract, query, and analyse your Mac iMessage history"
readme = "../../README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
keywords = ["imessage", "macos", "analysis", "arrow", "datafusion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyarrow>=17.0",
]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py311"]
python-source = "python"
module-name = "imessage_analysis._lib"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
